@@ -1,7 +1,7 @@
 Package: ModTools
 Type: Package
 Title: Tools for Building Regression and Classification Models
-Version: 0.9.7
+Version: 0.9.8
 Date: 2024-03-25
 Encoding: UTF-8
 Authors@R: c(
@@ -24,6 +24,12 @@ Description: Collection of tools for regression and classification tasks. The pa
 Depends: DescTools, MASS, nnet, survival, R (>= 3.5.0)
 License: GPL (>= 2)
 Suggests: VGAM
-Imports: e1071, C50, rpart, randomForest, pROC, methods, relaimpo, rpart.plot, lattice, lmtest, car, robustbase, class, NeuralNetTools, naivebayes, sandwich, AER
+Imports: e1071, C50, rpart, randomForest, pROC, methods, relaimpo, rpart.plot, lattice, lmtest, car, robustbase, class, NeuralNetTools, naivebayes, sandwich, AER, boot
+URL: https://andrisignorell.github.io/ModTools/,
+            https://github.com/AndriSignorell/ModTools/
+BugReports: https://github.com/AndriSignorell/ModTools/issues
 LazyLoad: yes
 LazyData: yes
+RoxygenNote: 7.3.1
+Roxygen: list(markdown = TRUE)
+Config/testthat/edition: 3
